cart context and user converted to redux toolkit

--- a/src/index.scss
+++ b/src/index.scss
@@ -7,8 +7,6 @@
 }
 ::-webkit-scrollbar-track {
   background: #b9b9b9;
-  border-radius: 100vw;
-  margin: 0.4em 0;
 }
 
 ::-webkit-scrollbar-thumb {
@@ -21,8 +19,8 @@ body {
   font-family: "Poppins", -apple-system;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  padding: 5px 30px;
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 code {
