--- a/src/scss/navigation.styles.scss
+++ b/src/scss/navigation.styles.scss
@@ -4,6 +4,7 @@
   display: flex;
   justify-content: space-between;
   margin-bottom: 25px;
+  padding: 0 1rem;
   .logo-container {
     height: 100%;
     width: 70px;
