--- a/src/scss/singForm.styles.scss
+++ b/src/scss/singForm.styles.scss
@@ -5,7 +5,8 @@ input {
     border: none !important;
 }
 
-.fa-eye, .fa-eye-slash {
+.fa-eye,
+.fa-eye-slash {
     position: relative;
     color: #777;
     top: -28px;
@@ -15,7 +16,22 @@ input {
 
 h2 {
     font-weight: 700;
-    font-size: clamp(1.6rem, 2.5vh, .8rem);
+    font-size: clamp(1.6rem, 2.5vh, 0.8rem);
     letter-spacing: 2px;
     color: #555;
+}
+
+.submit {
+    color: #fff;
+    background-color: #212529;
+    border: 2px solid #212529;
+    transition: 0.2s all ease-in-out;
+    -webkit-transition: 0.2s all ease-in-out;
+    -moz-transition: 0.2s all ease-in-out;
+    -ms-transition: 0.2s all ease-in-out;
+    -o-transition: 0.2s all ease-in-out;
+    &:hover {
+        background-color: rgb(181, 179, 179);
+        color: #212529;
+    }
 }
