--- a/src/css/loader.css
+++ b/src/css/loader.css
@@ -1,1 +1,1 @@
-.loader-wrapper{position:fixed;top:0;left:0;height:100%;width:100%;display:flex;justify-content:center;align-items:center;background-color:#111}.fade-out{opacity:0;visibility:hidden}
+.loader-wrapper{position:fixed;top:0;left:0;height:100vh;width:100vw;display:flex;justify-content:center;align-items:center;background-color:#111}.fade-out{opacity:0;visibility:hidden}
