--- a/src/scss/navigation.styles.scss
+++ b/src/scss/navigation.styles.scss
@@ -47,7 +47,7 @@
     span {
       position: absolute;
       font-size: 12px;
-      color: white;
+      color: #eee;
       right: 13px;
       top: 5px;
     }
