--- a/src/index.scss
+++ b/src/index.scss
@@ -1,21 +1,24 @@
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
+// scrollbar styling
 ::-webkit-scrollbar {
-  width: 1em;
+  width: 1.1em;
+}
+::-webkit-scrollbar-thumb {
+  background-color: hsl(358, 80%, 50%);
+  border-radius: 100vh;
 }
 ::-webkit-scrollbar-track {
-  background: #b9b9b9;
-}
-
-::-webkit-scrollbar-thumb {
-  background: #303030;
-  border-radius: 100vw;
+  background-color: hsl(358, 91%, 68%);
+  border-radius: 100vh;
+  margin: 5px 0;
 }
 
 body {
-  margin: 0;
   font-family: "Poppins", -apple-system;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
