--- a/src/scss/categories.styles copy.scss
+++ b/src/scss/categories.styles copy.scss
@@ -81,14 +81,15 @@ header {
       }
     }
     .slider-icon {
-      // font-size: clamp(3rem, 2.5vh, 1.6rem);
-      width: 80% !important;
+      font-size: 1.6rem;
+      // width: 80% !important;
     }
     .carousel-indicators {
       left: 240px;
       // margin-left: 20%;
       justify-content: flex-end;
       img {
+        cursor: pointer;
         width: 11%;
         // background-color: #f4f3f3;
         border: 2px solid #dddddb;
