--- a/src/scss/categories.styles.scss
+++ b/src/scss/categories.styles.scss
@@ -1,85 +1,116 @@
-.container-custom {
-  width: 100%;
+$blue: #54cad7;
+body {
+  background-color: #f7f8f3;
+}
+@mixin salesOrNewClass {
+  color: #f7f8f3;
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: center;
+  align-items: center;
+  width: 60px;
+  height: 60px;
+  background-color: $blue;
+  border-radius: 50%;
+  right: -15px;
+  top: 5px;
+  position: absolute;
+  transform: rotate(45deg);
+}
+.custom-btn {
+  color: #fdb629;
+  border: 2px solid #fcbf49;
+  transition: 0.4s color ease-in-out;
+  transition: 0.7s background-color ease-in-out;
+  margin-bottom: 15px;
+  &:hover {
+    color: #0c1618;
+    background-color: #fcc049dd;
+    border-color: #ffaa00;
+  }
+}
+header {
+  .row {
+    height: 100% !important;
+  }
+  .new::before {
+    content: "NEW!";
+    @include salesOrNewClass();
+  }
+  #slider {
+    top: 50px;
+    background-color: #f7f8f3;
+    padding-bottom: 3rem;
+    height: 100% !important;
+    #sales::after {
+      content: "50%";
+      @include salesOrNewClass();
+    }
+    .carousel-inner {
+      transition: 0.3s all ease-in-out;
+    }
+    .carousel-item {
+      .img {
+        img {
+          position: relative;
+          right: 40px;
+          max-width: 100%;
+          border: 3px solid $blue;
+          border-radius: 4px;
+        }
+      }
+      .prod-details {
+        .prod-category {
+          display: inline-block;
+          border: 2px solid #dddddb;
+          border-radius: 2px;
+          position: relative;
+          left: -50px;
+          top: -25px;
+          color: #4f4f4f;
+          font-weight: 600;
+          background-color: #f7f8f3;
+        }
+        border: 2px solid #dddddb;
+        border-radius: 5px;
+        padding: 0.8rem 4rem 6rem 2rem !important;
+        h2 {
+          color: #0c1618;
+          font-weight: 600;
+          font-size: clamp(1.4rem, 2rem, 2.2rem);
+        }
+      }
+    }
+    .slider-icon {
+      font-size: 1.6rem;
+      // width: 80% !important;
+    }
+    .carousel-indicators {
+      left: 240px;
+      // margin-left: 20%;
+      justify-content: flex-end;
+      img {
+        cursor: pointer;
+        width: 11%;
+        // background-color: #f4f3f3;
+        border: 2px solid #dddddb;
+        margin: 0 10px;
+        border-radius: 4px;
+        &.active {
+          border-color: #fcbf49;
+        }
+      }
+    }
+  }
 }
 
-.card-custom {
-  min-width: 30%;
-  height: 240px;
-  flex: 1 1 auto;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border: 1px solid #333;
-  margin: 0 7.5px 15px;
-  overflow: hidden;
-  box-shadow: 7px 4px 15px rgb(0, 0, 0, 0.4);
-
-  &:hover {
-
-    & .background-image {
-      transform: scale(1.1);
-      transition: transform 6s cubic-bezier(0.25, 0.45, 0.45, 0.95);
-      -webkit-transition: transform 6s cubic-bezier(0.25, 0.45, 0.45, 0.95);
-      -moz-transition: transform 6s cubic-bezier(0.25, 0.45, 0.45, 0.95);
-      -ms-transition: transform 6s cubic-bezier(0.25, 0.45, 0.45, 0.95);
-      -o-transition: transform 6s cubic-bezier(0.25, 0.45, 0.45, 0.95);
-    }
-
-    & .category-body-container {
-      opacity: 0.9;
-    }
+@media (max-width: 968px) {
+  .prod-col {
+    margin: 0 auto;
+    width: 90% !important;
   }
-
-  &.large {
-    height: 380px;
-  }
-
-  &:first-child {
-    margin-right: 7.5px;
-  }
-
-  &:last-child {
-    margin-left: 7.5px;
-  }
-
-  .background-image {
-    width: 100%;
-    height: 100%;
-    background-size: cover;
-    background-position: center;
-  }
-
-.body {
-    height: 115px;
-    padding: 0 25px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    border: 1px solid #444;
-    background-color: white;
-    opacity: 0.8;
-    position: absolute;
-    border-radius: 3px;
-    -webkit-border-radius: 3px;
-    -moz-border-radius: 3px;
-    -ms-border-radius: 3px;
-    -o-border-radius: 3px;
-    h2 {
-      font-weight: bold;
-      margin: 10px 6px;
-      font-size: 22px;
-      color: #4a4a4a;
-      cursor: text;
-    }
-
-    button {
-      font-size: 16px;
-      color: #fff !important;
-      cursor: pointer;
+  .carousel-indicators {
+    img {
+      width: 51% !important;
     }
   }
 }
