--- a/src/scss/navigation.styles.scss
+++ b/src/scss/navigation.styles.scss
@@ -1,55 +1,86 @@
-.navigation {
-  height: 70px;
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 25px;
-  padding: 0 1rem;
-  .logo-container {
-    height: 100%;
-    width: 70px;
-    padding: 25px;
+// navbar styling
+$orange: #ff5a5f;
+@mixin transition($sec, $type) {
+  transition: $sec $type ease-in-out;
+}
+
+.user-menu.dropdown-menu{
+  right: 2px;
+}
+
+nav {
+  font-size: 15px;
+  border-bottom: 3px solid #eef0ea;
+  #navbarDropdown,
+  .search-bar {
+    border-radius: 3px;
+    border: 2px solid #ebebeb;
+    box-shadow: none !important;
+    &:focus {
+      border-color: $orange;
+    }
   }
-
-  .nav-links-container {
-    width: 50%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    list-style: none;
-
-    .nav-link {
-      color: #333;
-      font-weight: 600;
-      padding: 10px 15px;
-      cursor: pointer;
-      text-decoration: none;
-      transition: 0.3s all ease-in-out;
-      -webkit-transition: 0.3s all ease-in-out;
-      -moz-transition: 0.3s all ease-in-out;
-      -ms-transition: 0.3s all ease-in-out;
-      -o-transition: 0.3s all ease-in-out;
+  .dropdown-costume {
+    box-shadow: 0px 3px 7px rgb(0 0 0 / 40%) !important;
+    border: 1px solid #ebebeb;
+    .dropdown-item {
+      &:focus {
+        background-color: transparent !important;
+      }
+    }
+    label,
+    .dropdown-item a {
+      @include transition(0.4s, all);
       &:hover {
-        transform: translateY(-3px);
-        -webkit-transform: translateY(-3px);
-        -moz-transform: translateY(-3px);
-        -ms-transform: translateY(-3px);
-        -o-transform: translateY(-3px);
-        letter-spacing: 1px;
+        color: #f4f4f4 !important;
+        background-color: #ff5a60c9;
+        border-radius: 25px;
+      }
+      &:focus {
+        color: #ebebeb;
+        background-color: #ff5a5f;
+      }
+      input[type="checkbox"] {
+        accent-color: #ff5a5f;
+        &:focus {
+          box-shadow: none;
+          outline: none;
+          border-color: none;
+        }
       }
     }
   }
-  .fa-shopping-cart {
-    color: #333 !important;
-    position: relative;
-    font-size: 35px;
-    span {
-      position: absolute;
-      font-size: 12px;
-      color: #eee;
-      right: 13px;
-      top: 5px;
+  .search-btn {
+    background-color: #ff3956;
+    color: #f4f4f4;
+    font-weight: 600;
+    border-radius: 2px;
+    box-shadow: none;
+    &:hover,
+    &:focus,
+    &:active,
+    &:active:hover,
+    &:active:focus {
+      background-color: #c2101e;
+      border-color: #c2101e;
+      color: #fff;
+      box-shadow: none;
+    }
+  }
+  .navbar-nav {
+    .active a {
+      color: #ff3956 !important;
+      border-bottom: 2px solid #ff5a5f;
+      font-weight: 600;
+      @include transition(0.3s, all);
+      &:hover {
+        color: #d6d6d6 !important;
+        border-bottom: 2px solid #d6d6d6;
+      }
+    }
+    .nav-link {
+      font-weight: bold;
+      color: #e7e7e7;
     }
   }
 }
