--- a/src/scss/payment form.scss
+++ b/src/scss/payment form.scss
@@ -1,9 +1,9 @@
 body {
 	background-color: #f6f6fc;	
 }
-.card-container {
-	background-color: #e7e7e7;
-}
+// .card-container {
+// 	background-color: #e7e7e7;
+// }
 .cc-types__img {
 	width: 11%;
 	transition: .5s all ease-in-out;
