stripe added successfully!

--- a/src/scss/navigation.styles.scss
+++ b/src/scss/navigation.styles.scss
@@ -68,7 +68,7 @@ nav {
     }
   }
   .navbar-nav {
-    .active a {
+    .active {
       color: #ff3956 !important;
       border-bottom: 2px solid #ff5a5f;
       font-weight: 600;
