--- a/src/scss/singForm.styles.scss
+++ b/src/scss/singForm.styles.scss
@@ -31,7 +31,8 @@ h2 {
     -ms-transition: 0.2s all ease-in-out;
     -o-transition: 0.2s all ease-in-out;
     &:hover {
-        background-color: rgb(181, 179, 179);
+        background-color: #eee;
         color: #212529;
     }
 }
+
